--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -2,15 +2,21 @@
 title: Post One faltu faltu faltu
 date: "2021-12-14"
 author: Jay Mondal
-image: /favicon.png
+image: /s.jpg
 ---
 
 <br>
-
-## Hello, ##
+<h1 class="text-xl">yoo</h1>
+Hello,
 
 this is notgood
 I am _Post One._
 ![hey](/favicon.png)
+
+![text](/s.jpg)
+<br>
+
+![yoo](/s2.jpg)
+
 
 **Nice to meet you!**
